[package]
name = "wasmandegui"
version = "0.1.0"
edition = "2021"
default-run = "wasmandegui-native"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.34"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }

[[bin]]
name = "wasmandegui-native"
path = "src/main.rs"
